force-app/main/default/objects/RecordTypeMappingCmdt__mdt/RecordTypeMappingCmdt__mdt.object-meta.xml
<CustomObject>
	<label>RecordTypeMappingCmdt</label>
	<pluralLabel>RecordTypeMappingCmdt</pluralLabel>
</CustomObject>