force-app/main/default/objects/RecordTypeMappingCmdt__mdt/fields/CountryCode__c.field-meta.xml
<CustomField>
	<fullName>CountryCode__c</fullName>
	<description>The name of a CountryCode picklist value.</description>
	<inlineHelpText>The name of a CountryCode picklist value.</inlineHelpText>
	<label>CountryCode</label>
	<type>Text</type>
	<length>10</length>
</CustomField>