force-app/main/default/objects/RecordTypeMappingCmdt__mdt/fields/Industry__c.field-meta.xml
<CustomField>
	<fullName>Industry__c</fullName>
	<description>The name of a picklist value in the Lead Industry picklist.</description>
	<inlineHelpText>The name of a picklist value in the Lead Industry picklist.</inlineHelpText>
	<label>Industry</label>
	<type>Text</type>
	<length>255</length>
</CustomField>