force-app/main/default/objects/RecordTypeMappingCmdt__mdt/fields/RecordTypeName__c.field-meta.xml
<CustomField>
	<fullName>RecordTypeName__c</fullName>
	<description>The name of the record type to apply to the Lead when the Industry and Country values match this custom setting's Industry and Country values.</description>
	<inlineHelpText>The name of the record type to apply to the Lead when the Industry and Country values match this custom setting's Industry and Country values.</inlineHelpText>
	<label>Record Type Name</label>
	<type>Text</type>
	<length>255</length>
</CustomField>